--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon build/src/start.js",
-    "build": "tsc"
+    "build": "mjml src/email/reset.mjml --output src/email/reset.html",
+    "build:html": "mjml --watch src/email/index.mjml --output src/email/index.html"
   },
   "dependencies": {
     "@hapi/joi-date": "^2.0.1",
     "@types/hapi__joi": "^17.1.8",
+    "@types/nodemailer-express-handlebars": "^4.0.2",
     "amqp-connection-manager": "^4.1.1",
     "amqplib": "^0.8.0",
     "awilix": "^6.0.0",
@@ -26,17 +28,21 @@
     "dotenv-extended": "^2.9.0",
     "express": "^4.17.2",
     "express-joi-validation": "^5.0.1",
+    "handlebars": "^4.7.7",
     "http-status-codes": "^2.2.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mailhog": "^4.16.0",
+    "mjml": "^4.12.0",
+    "mjml-cli": "^4.12.0",
     "moment": "^2.29.1",
     "mongoose": "^6.1.7",
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "multer": "^1.4.4",
     "nanoid": "^3.2.0",
     "nodemailer": "^6.7.2",
+    "nodemailer-express-handlebars": "^4.0.0",
     "pino": "7.0.2",
     "pino-pretty": "7.1.0"
   },
