--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon build/src/start.js",
-    "build": "mjml src/email/reset.mjml --output src/email/reset.html",
-    "build:html": "mjml --watch src/email/index.mjml --output src/email/index.html"
+    "build": "tsc",
+    "postinstall": "npm run build",
+    "build:email": "mjml src/email/reset.mjml --output src/email/reset.html",
+    "build:html": "mjml --watch src/email/index.mjml --output src/email/index.html",
+    "start": "node build/src/start.js"
+  },
+  "engines": {
+    "node": "12.18.3"
   },
   "dependencies": {
     "@hapi/joi-date": "^2.0.1",
@@ -44,7 +50,8 @@
     "nodemailer": "^6.7.2",
     "nodemailer-express-handlebars": "^4.0.0",
     "pino": "7.0.2",
-    "pino-pretty": "7.1.0"
+    "pino-pretty": "7.1.0",
+    "ts-node": "^10.5.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
