--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hapi/joi-date": "^2.0.1",
     "@types/hapi__joi": "^17.1.8",
     "@types/nodemailer-express-handlebars": "^4.0.2",
+    "@types/nodemailer-mailgun-transport": "^1.4.3",
     "amqp-connection-manager": "^4.1.1",
     "amqplib": "^0.8.0",
     "awilix": "^6.0.0",
@@ -49,6 +50,7 @@
     "nanoid": "^3.2.0",
     "nodemailer": "^6.7.2",
     "nodemailer-express-handlebars": "^4.0.0",
+    "nodemailer-mailgun-transport": "^2.1.3",
     "pino": "7.0.2",
     "pino-pretty": "7.1.0",
     "ts-node": "^10.5.0"
